# LangChaineAlejo

./: .gitignore  README copy.md  init_ev_script.sh  langgraph.json  pyproject.toml  readme.md  requirements.txt
examples/: doc.md  gemini_example.py  modelos-disponibles.py  openia_example.py
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured-output.ipynb  09-prompting.ipynb  10-tools.ipynb  11-conditions.ipynb  12-parallization.ipynb  13-random.ipynb  test.ipynb
src/agents/: main.py  rag.py  simple.py
