[project]
name = "langraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.0.1",
    "langgraph-cli[inmem]>=0.4.4",
    "pandas>=2.3.3",
]
